Add test method to endpoint (#34)
